--- a/core/views/productCart.html
+++ b/core/views/productCart.html
@@ -6,19 +6,66 @@
 <body>
     <div class="Cart-Container">
         <div class="Header">
-            <h3 class="Heading">Carrito de compras</h3>
-            <h5 class="Action">Remover todo</h5>
-            <div class=”Cart-Items”>
-                <div class=”image-box”>
-                    <img src=”images/apple.png”>
+        <h3 class="Heading">Carrito de compras</h3>
+        <h5 class="Action">Remover todo</h5>
+        </div>
+
+        <div class="Cart-Items">
+            
+            <div class="Product">
+                <img class ="Image-Box" src="/images/mate-boca.webp" alt="mate boquita">
+                    <div class="about">
+                        <h1 class="title">Mate Boca Jrs.</h1>
+                        <h3 class="subtitle">600ml</h3>
+                    </div>
+                <div class="counter">
+                    <div class="btn">+</div>
+                    <div class="count">2</div>
+                    <div class="btn">-</div>
                 </div>
-                <div class=”about”>
-                <h1 class=”title”>Apple Juice</h1>
-                <h3 class=”subtitle”>250ml</h3>
-                <div class=”counter”></div>
-                <div class=”prices”></div>
+                    <div class="prices">
+                    <div class="amount">$799.99</div>
+                    <div class="save"><u>Guardar</u></div>
+                    <div class="remove"><u>Remover</u></div>
+                </div>            
+            </div>
+
+            <div class="Product">
+                <img class ="Image-Box" src="/images/termo-generico.webp" alt="Termo acero inoxidable">
+                    <div class="about">
+                        <h1 class="title">Termo acero inoxidable</h1>
+                        <h3 class="subtitle">1L</h3>
+                    </div>
+                <div class="counter">
+                    <div class="btn">+</div>
+                    <div class="count">1</div>
+                    <div class="btn">-</div>
+                </div>
+                    <div class="prices">
+                    <div class="amount">$1999.99</div>
+                    <div class="save"><u>Guardar</u></div>
+                    <div class="remove"><u>Remover</u></div>
                 </div>
             </div>
+            <!--Añadir más productos aquí-->
+
+
+    
+            <hr>
+            <div class="checkout">
+            <div class="total">
+            <div>
+            <div class="Subtotal">Sub-Total</div>
+            <div class="items">2 items</div>
+            </div>
+            <div class="total-amount">$2799.98</div>
+            </div>
+            <div class="buttons">
+                <button class="button">Volver</button>
+                <button class="button">Comprar</button>
+            
+            </div>   
+        </div>
     </div>
-   </body>
-</html>
+    
+</body>
