--- a/core/views/home.html
+++ b/core/views/home.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documento</title>
+    <title>MateAr</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
+    <header>
+
+    </header>
+
+    <main>
+<section>
+    <h3 class="title-section">Ofertas</h3>
+    <article>
+        <img src="\images\termo-generico.webp" alt="termo">
+        <p class="price">$5.000/p>
+            <p class="discount">20$ OFF</p>
+            <h4 class="description">Termo clásico</h4>
+    </article>
+    <article>
+        <img src="\images\termo-y-mate-argentina.jpg" alt="termo">
+        <p class="price">$6.500/p>
+            <p class="discount">15$ OFF</p>
+            <h4 class="description">Termo Argentino</h4>
+    </article>
+    <article>
+        <img src="\images\mate-amplificador.webp" alt="mate">
+        <p class="price">$2.000/p>
+            <p class="discount">15$ OFF</p>
+            <h4 class="description">Mate Amplificador</h4>
+    </article>
+    <article>
+        <img src="\images\mate-boca.webp" alt="mate">
+        <p class="price">$2.000/p>
+            <p class="discount">15$ OFF</p>
+            <h4 class="description">Mate de Boca</h4>
+    </article>
+
+
+</section>
+
+    </main>
     
 </body>
 
