--- a/core/views/home.html
+++ b/core/views/home.html
@@ -4,13 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+rel="stylesheet" />
     <title>MateAr</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
     <header>
-
+        <img src="\logo\Logo.png" width="20%" alt="Logo MateAr">
+        <div class="barra">
+            <input type="text" name="search" placeholder="Buscar producto o marca" class="src" autocomplete="off">
+        </div>
+        
+        <nav> <ul class="item-list-uno">
+            <li><a href="#">Ofertas</a></li>
+            <li><a href="#">Ayuda</a></li>
+        </ul>
+        <ul class="item-list-dos">
+            <li><a href="#">Registrate <i class="fas fa-id-card"></i></a></li>
+            <li><a href="#">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
+            <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
+        </ul>
+    </nav>
     </header>
 
     <main>
@@ -40,11 +56,34 @@
             <p class="discount">15$ OFF</p>
             <h4 class="description">Mate de Boca</h4>
     </article>
-
+    <article>
+        <img src="\images\mate-boca.webp" alt="mate">
+        <p class="price">$2.000/p>
+            <p class="discount">15$ OFF</p>
+            <h4 class="description">Mate de Boca</h4>
+    </article>
 
 </section>
 
     </main>
+
+    <footer class="contenedor-footer">
+        <div>
+            <div class="icono-footer"><i class="fas fa-credit-card"></i></div>
+            <h4 class="h4-footer">Pagá con tarjeta o en efectivo</h4>
+            <p class="p-footer">Con MateAr Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
+        </div>
+        <div>
+            <div class="icono-footer"><i class="fas fa-gift"></i></div>
+            <h4 class="h4-footer">Envío gratis desde $ 4.000</h4>
+            <p class="p-footer">Solo por estar registrad@ en MateAr tenés envíos gratis en miles de productos.</p>
+        </div>
+            <div>
+            <div class="icono-footer"><i class="fas fa-user-shield"></i></div>
+            <h4 class="h4-footer">Seguridad, de principio a fin</h4>
+            <p class="p-footer">¿No te gusta? ¡Devolvelo! En MateAr, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
+        </div>
+    </footer>
     
 </body>
 
