--- a/core/views/home.html
+++ b/core/views/home.html
@@ -20,8 +20,6 @@ rel="stylesheet" />
         <nav> <ul class="item-list-uno">
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Ayuda</a></li>
-        </ul>
-        <ul class="item-list-dos">
             <li><a href="#">Registrate <i class="fas fa-id-card"></i></a></li>
             <li><a href="#">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
             <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
@@ -30,33 +28,33 @@ rel="stylesheet" />
     </header>
 
     <main>
-<section>
+<section class="contenedor-articulos">
     <h3 class="title-section">Ofertas</h3>
-    <article>
+    <article class="articulos">
         <img src="\images\termo-generico.webp" alt="termo">
         <p class="price">$5.000/p>
             <p class="discount">20$ OFF</p>
             <h4 class="description">Termo clásico</h4>
     </article>
-    <article>
+    <article class="articulos">
         <img src="\images\termo-y-mate-argentina.jpg" alt="termo">
         <p class="price">$6.500/p>
             <p class="discount">15$ OFF</p>
             <h4 class="description">Termo Argentino</h4>
     </article>
-    <article>
+    <article class="articulos">
         <img src="\images\mate-amplificador.webp" alt="mate">
         <p class="price">$2.000/p>
             <p class="discount">15$ OFF</p>
             <h4 class="description">Mate Amplificador</h4>
     </article>
-    <article>
+    <article class="articulos">
         <img src="\images\mate-boca.webp" alt="mate">
         <p class="price">$2.000/p>
             <p class="discount">15$ OFF</p>
             <h4 class="description">Mate de Boca</h4>
     </article>
-    <article>
+    <article class="articulos">
         <img src="\images\mate-boca.webp" alt="mate">
         <p class="price">$2.000/p>
             <p class="discount">15$ OFF</p>
