--- a/core/views/home.html
+++ b/core/views/home.html
@@ -12,7 +12,7 @@ rel="stylesheet" />
 
 <body>
     <header>
-        <img src="\logo\Logo.png" width="20%" alt="Logo MateAr">
+        <img src="/images/logo-matear.jpg" width="20%" alt="Logo MateAr">
         <div class="barra">
             <input type="text" name="search" placeholder="Buscar producto o marca" class="src" autocomplete="off">
         </div>
