--- a/core/views/home.html
+++ b/core/views/home.html
@@ -27,38 +27,38 @@ rel="stylesheet" />
     </nav>
     </header>
 
-    <main>
+    <main class="main-section">
+        <h3 class="title-section">Ofertas</h3>
 <section class="contenedor-articulos">
-    <h3 class="title-section">Ofertas</h3>
     <article class="articulos">
-        <img src="\images\termo-generico.webp" alt="termo">
-        <p class="price">$5.000/p>
+        <img class="imagenes" src="\images\termo-generico.webp" alt="termo">
+        <p class="price">$5.000 </p>
             <p class="discount">20$ OFF</p>
             <h4 class="description">Termo clásico</h4>
     </article>
     <article class="articulos">
-        <img src="\images\termo-y-mate-argentina.jpg" alt="termo">
-        <p class="price">$6.500/p>
+        <img class="imagenes" src="\images\termo-y-mate-argentina.jpg" alt="termo">
+        <p class="price">$6.500 </p>
             <p class="discount">15$ OFF</p>
             <h4 class="description">Termo Argentino</h4>
     </article>
     <article class="articulos">
-        <img src="\images\mate-amplificador.webp" alt="mate">
-        <p class="price">$2.000/p>
+        <img class="imagenes" src="\images\mate-amplificador.webp" alt="mate">
+        <p class="price">$2.000 </p>
             <p class="discount">15$ OFF</p>
             <h4 class="description">Mate Amplificador</h4>
     </article>
     <article class="articulos">
-        <img src="\images\mate-boca.webp" alt="mate">
-        <p class="price">$2.000/p>
+        <img class="imagenes" src="\images\mate-boca.webp" alt="mate">
+        <p class="price">$2.000</p>
             <p class="discount">15$ OFF</p>
             <h4 class="description">Mate de Boca</h4>
     </article>
     <article class="articulos">
-        <img src="\images\mate-boca.webp" alt="mate">
-        <p class="price">$2.000/p>
+        <img class="imagenes" src="\images\mate-carpincho.webp" alt="mate">
+        <p class="price">$2.000</p>
             <p class="discount">15$ OFF</p>
-            <h4 class="description">Mate de Boca</h4>
+            <h4 class="description">Mate Carpincho</h4>
     </article>
 
 </section>
