--- a/core/views/home.html
+++ b/core/views/home.html
@@ -20,9 +20,9 @@ rel="stylesheet" />
         <nav> <ul class="item-list-uno">
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Ayuda</a></li>
-            <li><a href="#">Registrate <i class="fas fa-id-card"></i></a></li>
-            <li><a href="#">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
-            <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
+            <li><a href="/register">Registrate <i class="fas fa-id-card"></i></a></li>
+            <li><a href="/login">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
+            <li><a href="/cart">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
         </ul>
     </nav>
     </header>
