--- a/core/public/css/loginStyles.css
+++ b/core/public/css/loginStyles.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    height: 100vh;
     background: linear-gradient(to bottom right, #8B7241, #453921);
     position: relative;
 }
