--- a/core/views/home.html
+++ b/core/views/home.html
@@ -7,24 +7,25 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 rel="stylesheet" />
     <title>MateAr</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/homeStyles.css">
 </head>
 
 <body>
     <header>
-        <img src="/images/logo-matear.jpg" width="20%" alt="Logo MateAr">
+        <div class="barra1">
+        <img src="/images/logo-mat-ear.png" alt="Logo MateAr">
         <div class="barra">
             <input type="text" name="search" placeholder="Buscar producto o marca" class="src" autocomplete="off">
         </div>
+        </div>
         
-        <nav> <ul class="item-list-uno">
+         <ul class="item-list-uno">
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Ayuda</a></li>
             <li><a href="/register">Registrate <i class="fas fa-id-card"></i></a></li>
             <li><a href="/login">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
             <li><a href="/cart">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
         </ul>
-    </nav>
     </header>
 
     <main class="main-section">
