--- a/core/public/css/productCartStyles.css
+++ b/core/public/css/productCartStyles.css
@@ -1,6 +1,10 @@
-header{display: flex; flex-direction: column;}
-
-.barra1{display: flex; flex-direction: row; background-color: rgba(227,246,236,255);}
+header{display: flex; flex-direction: column; width: 100vw;}
+html{background: linear-gradient(to right, #8B7241, #453921);}
+.barra1{
+    width: 100vw;
+    display: flex; 
+    flex-direction: row; 
+    background-color: rgba(227,246,236,255);}
 
 .barra{padding-left:40vw; align-self: center; box-sizing: border-box; margin: 2vw; justify-self:flex-end}
 
@@ -8,9 +12,9 @@ header{display: flex; flex-direction: column;}
     font-size: 24px;
 }
 
-
+.logo{align-self: center;}
 .item-list-uno{
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -21,11 +25,10 @@ header{display: flex; flex-direction: column;}
     height: 6vh;
     padding-top: 3vh;
 }
-
+html{background: linear-gradient(to right, #8B7241, #453921);}
 body{
     margin: 0;
     padding: 0;
-    background: linear-gradient(to bottom right, #8B7241, #453921);
     height: 100vh;
     display: flex;
     flex-direction: column;
