--- a/core/views/productCart.html
+++ b/core/views/productCart.html
@@ -5,7 +5,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 <header>
     <div class="barra1">
-    <img src="/images/logo-mat-ear.png" alt="Logo MateAr">
+    <img class = "logo"src="/images/logo-mat-ear.png" alt="Logo MateAr">
     <div class="barra">
         <input type="text" name="search" placeholder="Buscar producto o marca" class="src" autocomplete="off">
     </div>
