logré que el header sea responsive y apliqué a to2

--- a/core/public/css/loginStyles.css
+++ b/core/public/css/loginStyles.css
@@ -1,25 +1,30 @@
+header{display: flex; flex-direction: column; width: 100vw;}
 html{background: linear-gradient(to right, #8B7241, #453921);}
+.barra1{
+    width: 100vw;
+    display: flex; 
+    flex-direction: row;
+    justify-content: space-between; 
+    background-color: rgba(227,246,236,255);}
 
-body{
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    position: relative;
+.barra{
+    align-self: center; 
+    box-sizing: border-box; 
+    margin: 2vw; 
+    justify-self:flex-end;
+    
 }
-
-header{display: flex; flex-direction: column;}
-
-.barra1{display: flex; flex-direction: row; background-color: rgba(227,246,236,255);}
-
-.barra{padding-left:40vw; align-self: center; box-sizing: border-box; margin: 2vw; justify-self:flex-end}
+    
 
 .src {
     font-size: 24px;
+    width: 100%;
+    justify-self: flex-end;
 }
 
-
+.logo{align-self: center;}
 .item-list-uno{
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -30,6 +35,8 @@ header{display: flex; flex-direction: column;}
     height: 6vh;
     padding-top: 3vh;
 }
+
+body{margin:0px}
 
 .Main{
     position: relative;
