--- a/core/public/css/homeStyles.css
+++ b/core/public/css/homeStyles.css
@@ -7,19 +7,32 @@ body{
     background: linear-gradient(to bottom right, #8B7241, #453921);
     position: relative;
 }
-header{display: flex; flex-direction: column;}
+header{display: flex; flex-direction: column; width: 100vw;}
+.barra1{
+    width: 100vw;
+    display: flex; 
+    flex-direction: row;
+    justify-content: space-between; 
+    background-color: rgba(227,246,236,255);}
 
-.barra1{display: flex; flex-direction: row; background-color: rgba(227,246,236,255);}
-
-.barra{padding-left:40vw; align-self: center; box-sizing: border-box; margin: 2vw; justify-self:flex-end}
+.barra{
+    align-self: center; 
+    box-sizing: border-box; 
+    margin: 2vw; 
+    justify-self:flex-end;
+    
+}
+    
 
 .src {
     font-size: 24px;
+    width: 100%;
+    justify-self: flex-end;
 }
 
-
+.logo{align-self: center;}
 .item-list-uno{
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -27,7 +40,7 @@ header{display: flex; flex-direction: column;}
     align-self: center;
     background-color: rgb(122, 167, 181);
     margin: 0%;
-    height: 4vh;
+    height: 6vh;
     padding-top: 3vh;
 }
 
