--- a/core/public/css/productCartStyles.css
+++ b/core/public/css/productCartStyles.css
@@ -3,13 +3,23 @@ html{background: linear-gradient(to right, #8B7241, #453921);}
 .barra1{
     width: 100vw;
     display: flex; 
-    flex-direction: row; 
+    flex-direction: row;
+    justify-content: space-between; 
     background-color: rgba(227,246,236,255);}
 
-.barra{padding-left:40vw; align-self: center; box-sizing: border-box; margin: 2vw; justify-self:flex-end}
+.barra{
+    align-self: center; 
+    box-sizing: border-box; 
+    margin: 2vw; 
+    justify-self:flex-end;
+    
+}
+    
 
 .src {
     font-size: 24px;
+    width: 100%;
+    justify-self: flex-end;
 }
 
 .logo{align-self: center;}
@@ -25,11 +35,11 @@ html{background: linear-gradient(to right, #8B7241, #453921);}
     height: 6vh;
     padding-top: 3vh;
 }
-html{background: linear-gradient(to right, #8B7241, #453921);}
+
 body{
     margin: 0;
     padding: 0;
-    height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
