--- a/core/public/css/productDetailStyle.css
+++ b/core/public/css/productDetailStyle.css
@@ -1,16 +1,30 @@
-header{display: flex; flex-direction: column;}
+header{display: flex; flex-direction: column; width: 100vw;}
 html{background: linear-gradient(to right, #8B7241, #453921);}
-.barra1{display: flex; flex-direction: row; background-color: rgba(227,246,236,255);}
+.barra1{
+    width: 100vw;
+    display: flex; 
+    flex-direction: row;
+    justify-content: space-between; 
+    background-color: rgba(227,246,236,255);}
 
-.barra{padding-left:40vw; align-self: center; box-sizing: border-box; margin: 2vw; justify-self:flex-end}
+.barra{
+    align-self: center; 
+    box-sizing: border-box; 
+    margin: 2vw; 
+    justify-self:flex-end;
+    
+}
+    
 
 .src {
     font-size: 24px;
+    width: 100%;
+    justify-self: flex-end;
 }
 
-
+.logo{align-self: center;}
 .item-list-uno{
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
