mas header retoques

--- a/core/views/login.html
+++ b/core/views/login.html
@@ -10,7 +10,7 @@
 </head>
 <header>
     <div class="barra1">
-    <img src="/images/logo-mat-ear.png" alt="Logo MateAr">
+    <img class="logo"src="/images/logo-mat-ear.png" alt="Logo MateAr">
     <div class="barra">
         <input type="text" name="search" placeholder="Buscar producto o marca" class="src" autocomplete="off">
     </div>
