--- a/core/views/registro.html
+++ b/core/views/registro.html
@@ -11,7 +11,7 @@
 
 <header>
     <div class="barra1">
-    <img src="/images/logo-mat-ear.png" alt="Logo MateAr">
+    <img class = "logo"src="/images/logo-mat-ear.png" alt="Logo MateAr">
     <div class="barra">
         <input type="text" name="search" placeholder="Buscar producto o marca" class="src" autocomplete="off">
     </div>
