vinculé "ofertas" con /product-detail y cambie js

--- a/core/views/productDetail.html
+++ b/core/views/productDetail.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="/css/productDetailStyle.css">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 <header>
     <div class="barra1">
     <img class = "logo"src="/images/logo-mat-ear.png" alt="Logo MateAr">
@@ -7,7 +12,7 @@
     </div>
     
      <ul class="item-list-uno">
-        <li><a href="#">Ofertas</a></li>
+        <li><a href="/product-detail">Ofertas</a></li>
         <li><a href="#">Ayuda</a></li>
         <li><a href="/register">Registrate <i class="fas fa-id-card"></i></a></li>
         <li><a href="/login">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
