--- a/core/views/productCart.html
+++ b/core/views/productCart.html
@@ -12,7 +12,7 @@
     </div>
     
      <ul class="item-list-uno">
-        <li><a href="#">Ofertas</a></li>
+        <li><a href="/product-detail">Ofertas</a></li>
         <li><a href="#">Ayuda</a></li>
         <li><a href="/register">Registrate <i class="fas fa-id-card"></i></a></li>
         <li><a href="/login">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
