--- a/core/views/productDetail.html
+++ b/core/views/productDetail.html
@@ -1,16 +1,48 @@
-<header>
-    <div class="barra1">
-    <img src="/images/logo-mat-ear.png" alt="Logo MateAr">
-    <div class="barra">
-        <input type="text" name="search" placeholder="Buscar producto o marca" class="src" autocomplete="off">
-    </div>
-    </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/productDetailStyle.css">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <div class="barra1">
+        <img src="/images/logo-mat-ear.png" alt="Logo MateAr">
+        <div class="barra">
+            <input type="text" name="search" placeholder="Buscar producto o marca" class="src" autocomplete="off">
+        </div>
+        </div>
+        
+         <ul class="item-list-uno">
+            <li><a href="#">Ofertas</a></li>
+            <li><a href="#">Ayuda</a></li>
+            <li><a href="/register">Registrate <i class="fas fa-id-card"></i></a></li>
+            <li><a href="/login">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
+            <li><a href="/cart">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
+        </ul>
+    </header>
+    <div class="contenedor">
+
     
-     <ul class="item-list-uno">
-        <li><a href="#">Ofertas</a></li>
-        <li><a href="#">Ayuda</a></li>
-        <li><a href="/register">Registrate <i class="fas fa-id-card"></i></a></li>
-        <li><a href="/login">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
-        <li><a href="/cart">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
-    </ul>
-</header>
+        <img class="imagenes" src="\images\termo-generico.webp" alt="termo">
+        <div class="detalle">
+            
+            <h2 class="titulo-detalle">Detalle del Producto</h2>
+            <h4 class="description">Termo TERMOLAR Dupla de acero inoxidable 1L </h4>
+        <p class="price">$5.000 </p>
+            <p class="discount">20$ OFF</p>
+            <ul class="info-productos">
+                <li>Bebidas con la temperatura ideal.</li>
+                <li>Conserva el agua fría y caliente hasta por 6 horas.</li>
+                <li>Capacidad de 1 litro.</li>
+                <li>Apertura con pico.</li>
+                <li>Pico multidireccional que lo hace más práctico y funcional.</li>
+            </ul>
+            
+</div>
+</div>
+</body>
+</html>
