unifiqué las stylesheets

--- a/core/views/partials/header.ejs
+++ b/core/views/partials/header.ejs
@@ -1,4 +1,5 @@
 <header>
+    <link rel="stylesheet" href="/css/productCartStyles.css">
     <div class="barra1">
     <img src="/images/logo-mat-ear.png" alt="Logo MateAr">
     <div class="barra">
