--- a/core/views/producto/productCart.ejs
+++ b/core/views/producto/productCart.ejs
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/productCartStyles.css">
+    <link rel="stylesheet" href="/css/stylesheet.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
 
