--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -7,7 +7,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 rel="stylesheet" />
     <title>MateAr</title>
-    <link rel="stylesheet" href="/css/homeStyles.css">
+    <link rel="stylesheet" href="/css/stylesheet.css">
 </head>
 
 <body>
