vinculé TODAS LAS HOJAS DE ESTILO en una, usenla

--- a/core/views/partials/header.ejs
+++ b/core/views/partials/header.ejs
@@ -1,13 +1,13 @@
-<header>
-    <link rel="stylesheet" href="/css/productCartStyles.css">
-    <div class="barra1">
+<header class="header">
+    <link rel="stylesheet" href="/css/stylesheet.css">
+    <div class="barra-1-header">
     <img src="/images/logo-mat-ear.png" alt="Logo MateAr">
-    <div class="barra">
-        <input type="text" name="search" placeholder="Buscar producto o marca" class="src" autocomplete="off">
+    <div class="barra-2-header">
+        <input type="text" name="search" placeholder="Buscar producto o marca" class="searchbar-header" autocomplete="off">
     </div>
     </div>
     
-     <ul class="item-list-uno">
+     <ul class="item-list-header">
         <li><a href="/product-detail">Ofertas</a></li>
         <li><a href="#">Ayuda</a></li>
         <li><a href="/register">Registrate <i class="fas fa-id-card"></i></a></li>
