--- a/core/public/css/productDetailStyle.css
+++ b/core/public/css/productDetailStyle.css
@@ -5,30 +5,23 @@ body{
     background: linear-gradient(to bottom right, #8B7241, #453921);
     position: relative;
 }
-header{display: flex; flex-direction: column;}
-
-.barra1{display: flex; flex-direction: row; background-color: rgba(227,246,236,255);}
-
-.barra{padding-left:40vw; align-self: center; box-sizing: border-box; margin: 2vw; justify-self:flex-end}
-
-.src {
-    font-size: 24px;
-}
+.header-header{display: flex; flex-direction: column;}
 
 
-.item-list-uno{
+
+.item-list-header{
     width: 100%;
 }
 header{display: flex; flex-direction: column; width: 100vw;}
 html{background: linear-gradient(to right, #8B7241, #453921);}
-.barra1{
+.barra-1-header{
     width: 100vw;
     display: flex; 
     flex-direction: row;
     justify-content: space-between; 
     background-color: rgba(227,246,236,255);}
 
-.barra{
+.barra-2-header{
     align-self: center; 
     box-sizing: border-box; 
     margin: 2vw; 
@@ -37,14 +30,13 @@ html{background: linear-gradient(to right, #8B7241, #453921);}
 }
     
 
-.src {
+.searchbar-header {
     font-size: 24px;
     width: 100%;
     justify-self: flex-end;
 }
 
-.logo{align-self: center;}
-.item-list-uno{
+.item-list-header{
     width: 100vw;
 
     display: flex;
@@ -61,13 +53,13 @@ html{background: linear-gradient(to right, #8B7241, #453921);}
 /*Detalle de producto*/
 
 
-.contenedor{
+.contenedor-prod-det{
     display: flex;
     align-items: center;
 
 }
 
-.imagenes{
+.imagenes-prod-det{
     padding: 10px;
     
     box-shadow: 0 0 3em rgb(36, 35, 35);
@@ -75,7 +67,7 @@ html{background: linear-gradient(to right, #8B7241, #453921);}
     padding: 0%;
     border-radius: 5px;
 }
-.detalle{
+.detalle-prod-det{
     flex-direction: column;
     
     background-color: antiquewhite;
@@ -83,14 +75,14 @@ html{background: linear-gradient(to right, #8B7241, #453921);}
     padding: 25px;
     box-shadow: 0 0 3em rgb(36, 35, 35);
 }
-.titulo-detalle{
+.titulo-detalle-prod-det{
     border-bottom: #453921 solid 1px;
 }
-.price{
+.price-prod-det{
     font-size: 24px;
 
 }
-.discount{
+.discount-prod-det{
     color: green;
 
 }
