--- a/core/views/usuario/login.ejs
+++ b/core/views/usuario/login.ejs
@@ -16,7 +16,7 @@
         <main class ="Main-Form-Login">
             <div class ="Form-Login">
                 <form class ="Form-Login-Campos">
-                    <div class ="Datos-Input-Grupo">
+                    <div class ="Datos-Input-Grupo-Login">
                         <input type="email" class= "Form-Registro-Email" placeholder="Ingrese su correo electrónico">
                         <br>
                         <input type="password" class= "Form-Registro-Password" placeholder="Ingrese contraseña">
@@ -24,7 +24,7 @@
                     </div>
                     <br>
                     <br>
-                    <div class ="Botones-Form-Grupo">
+                    <div class ="Botones-Form-Grupo-Login">
                         <button type= "button" name="Crear-Cuenta" > Ingreso</button>
                     </div>
                 </form>
