--- a/core/views/usuario/registro.ejs
+++ b/core/views/usuario/registro.ejs
@@ -11,18 +11,18 @@
 
 
 
-<body>
+<body class="body-Registro">
     <%- include ('../partials/header') %>
-    <div class="Main">
+    <div class="Main-Registro">
         <main class ="Main-Form-Registro">
             <div class ="Form-Registro">
                 <form class ="Form-Registro-Campos">
-                    <div class ="Datos-Input-Grupo">
+                    <div class ="Datos-Input-Grupo-Registro">
                         <input type="email" class= "Form-Registro-Email" placeholder="Ingrese su correo electrónico">
                         <br>
                         <input type="password" class= "Form-Registro-Password" placeholder="Ingrese contraseña">
                         <br>
-                        <input type="password" class= "Form-Registro-ConfirPassword" placeholder="Confirme contraseña">
+                        <input type="password" class= "Form-Registro-ConfirmPassword" placeholder="Confirme contraseña">
                         <br>
                     </div>
                     <br>
