--- a/core/public/css/loginStyles.css
+++ b/core/public/css/loginStyles.css
@@ -1,44 +1,5 @@
-header{display: flex; flex-direction: column; width: 100vw;}
-html{background: linear-gradient(to right, #8B7241, #453921);}
-.barra1{
-    width: 100vw;
-    display: flex; 
-    flex-direction: row;
-    justify-content: space-between; 
-    background-color: rgba(227,246,236,255);}
 
-.barra{
-    align-self: center; 
-    box-sizing: border-box; 
-    margin: 2vw; 
-    justify-self:flex-end;
-    
-}
-    
-
-.src {
-    font-size: 24px;
-    width: 100%;
-    justify-self: flex-end;
-}
-
-.logo{align-self: center;}
-.item-list-uno{
-    width: 100vw;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    flex-grow: 1;
-    align-self: center;
-    background-color: rgb(122, 167, 181);
-    margin: 0%;
-    height: 6vh;
-    padding-top: 3vh;
-}
-
-body{margin:0px}
-
-.Main{
+.Main-login{
     position: relative;
     top: 150px;
 }
@@ -63,7 +24,7 @@ body{margin:0px}
     background-color: white;
 }
 
-.Form-Login-Campos .Datos-Input-Grupo input{
+.Form-Login-Campos .Datos-Input-Grupo-Login input{
     width: 15vw;
     height: 3vh;
     padding: 5px;
@@ -74,7 +35,7 @@ body{margin:0px}
     border-radius: 5px;
 }
 
-.Form-Login-Campos .Botones-Form-Grupo button{
+.Form-Login-Campos .Botones-Form-Grupo-Login button{
     margin-top: 1.2%;
     margin-left: 8%;  
     width: 14vw;
