--- a/core/views/producto/productCart.ejs
+++ b/core/views/producto/productCart.ejs
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html class="src-cart"></html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,46 +10,46 @@
 <body>
     <%- include ('../partials/header') %>
     <div class="Cart-Container">
-        <div class="Header">
-        <h3 class="Heading">Carrito de compras</h3>
-        <h5 class="Action">Remover todo</h5>
+        <div class="Header-cart">
+        <h3 class="Heading-cart">Carrito de compras</h3>
+        <h5 class="Action-cart">Remover todo</h5>
         </div>
 
         <div class="Cart-Items">
             
-            <div class="Product">
-                <img class ="Image-Box" src="/images/mate-boca.webp" alt="mate boquita">
-                    <div class="about">
-                        <h1 class="title">Mate Boca Jrs.</h1>
-                        <h3 class="subtitle">600ml</h3>
+            <div class="Product-cart">
+                <img class ="Image-Box-cart" src="/images/mate-boca.webp" alt="mate boquita">
+                    <div class="about-cart">
+                        <h1 class="title-cart">Mate Boca Jrs.</h1>
+                        <h3 class="subtitle-cart">600ml</h3>
                     </div>
-                <div class="counter">
-                    <div class="btn">+</div>
-                    <div class="count">2</div>
-                    <div class="btn">-</div>
+                <div class="counter-cart">
+                    <div class="btn-cart">+</div>
+                    <div class="count-cart">2</div>
+                    <div class="btn-cart">-</div>
                 </div>
-                    <div class="prices">
-                    <div class="amount">$799.99</div>
-                    <div class="save"><u>Guardar</u></div>
-                    <div class="remove"><u>Remover</u></div>
+                    <div class="prices-cart">
+                    <div class="amount-cart">$799.99</div>
+                    <div class="save-cart"><u>Guardar</u></div>
+                    <div class="remove-cart"><u>Remover</u></div>
                 </div>            
             </div>
 
-            <div class="Product">
-                <img class ="Image-Box" src="/images/termo-generico.webp" alt="Termo acero inoxidable">
-                    <div class="about">
-                        <h1 class="title">Termo acero inoxidable</h1>
-                        <h3 class="subtitle">1L</h3>
+            <div class="Product-cart">
+                <img class ="Image-Box-cart" src="/images/termo-generico.webp" alt="Termo acero inoxidable">
+                    <div class="about-cart">
+                        <h1 class="title-cart">Termo acero inoxidable</h1>
+                        <h3 class="subtitle-cart">1L</h3>
                     </div>
-                <div class="counter">
-                    <div class="btn">+</div>
-                    <div class="count">1</div>
-                    <div class="btn">-</div>
+                <div class="counter-cart">
+                    <div class="btn-cart">+</div>
+                    <div class="count-cart">1</div>
+                    <div class="btn-cart">-</div>
                 </div>
-                    <div class="prices">
-                    <div class="amount">$1999.99</div>
-                    <div class="save"><u>Guardar</u></div>
-                    <div class="remove"><u>Remover</u></div>
+                    <div class="prices-cart">
+                    <div class="amount-cart">$1999.99</div>
+                    <div class="save-cart"><u>Guardar</u></div>
+                    <div class="remove-cart"><u>Remover</u></div>
                 </div>
             </div>
             <!--Añadir más productos aquí-->
@@ -56,17 +57,17 @@
 
     
             <hr>
-            <div class="checkout">
-            <div class="total">
+            <div class="checkout-cart">
+            <div class="total-cart">
             <div>
-            <div class="Subtotal">Sub-Total</div>
-            <div class="items">2 items</div>
+            <div class="Subtotal-cart">Sub-Total</div>
+            <div class="items-cart">2 items</div>
             </div>
-            <div class="total-amount">$2799.98</div>
+            <div class="total-amount-cart">$2799.98</div>
             </div>
-            <div class="buttons">
-                <button class="button">Volver</button>
-                <button class="button">Comprar</button>
+            <div class="buttons-cart">
+                <button class="button-cart">Volver</button>
+                <button class="button-cart">Comprar</button>
             
             </div>   
         </div>
