--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="../../public/css/stylesheet.css">
+<link rel="stylesheet" href="/css/stylesheet.css">
 <head>
     
     <meta charset="UTF-8">
