--- a/core/views/partials/header.ejs
+++ b/core/views/partials/header.ejs
@@ -1,17 +1,20 @@
 <header class="header">
     <link rel="stylesheet" href="/css/stylesheet.css">
-    <div class="barra-1-header">
-    <img src="/images/logo-mat-ear.png" alt="Logo MateAr">
-    <div class="barra-2-header">
-        <input type="text" name="search" placeholder="Buscar producto o marca" class="searchbar-header" autocomplete="off">
+    <div class ="Cont_Header">
+        <div class="barra-1-header">
+            <img src="/images/logo-mat-ear.png" alt="Logo MateAr">
+            <div class="barra-2-header">
+                <input type="text" name="search" placeholder="Buscar producto o marca" class="searchbar-header" autocomplete="off">
+            </div>
+        </div>
+        <div>
+            <ul class="item-list-header">
+                <li><a href="/product-detail">Ofertas</a></li>
+                <li><a href="#">Ayuda</a></li>
+                <li><a href="/register">Registrate <i class="fas fa-id-card"></i></a></li>
+                <li><a href="/login">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="/cart">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
+            </ul>
+        </div>
     </div>
-    </div>
-    
-     <ul class="item-list-header">
-        <li><a href="/product-detail">Ofertas</a></li>
-        <li><a href="#">Ayuda</a></li>
-        <li><a href="/register">Registrate <i class="fas fa-id-card"></i></a></li>
-        <li><a href="/login">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
-        <li><a href="/cart">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
-    </ul>
 </header>
