--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -53,24 +53,7 @@
 
     </main>
 
-    <footer class="contenedor-footer-home">
-        <div>
-            <div class="icono-footer-home"><i class="fas fa-credit-card"></i></div>
-            <h4 class="h4-footer-home">Pagá con tarjeta o en efectivo</h4>
-            <p class="p-footer-home">Con MateAr Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
-        </div>
-        <div>
-            <div class="icono-footer-home"><i class="fas fa-gift"></i></div>
-            <h4 class="h4-footer-home">Envío gratis desde $ 4.000</h4>
-            <p class="p-footer-home">Solo por estar registrad@ en MateAr tenés envíos gratis en miles de productos.</p>
-        </div>
-            <div>
-            <div class="icono-footer-home"><i class="fas fa-user-shield"></i></div>
-            <h4 class="h4-footer-home">Seguridad, de principio a fin</h4>
-            <p class="p-footer-home">¿No te gusta? ¡Devolvelo! En MateAr, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
-        </div>
-    </footer>
+    <%- include ('../partials/footer') %>
     
 </body>
-
 </html>
