--- a/core/views/partials/header.ejs
+++ b/core/views/partials/header.ejs
@@ -1,14 +1,14 @@
-<header class="header">
+<header class="Header">
     <link rel="stylesheet" href="/css/stylesheet.css">
-    <div class ="Cont_Header">
-        <div class="barra-1-header">
+    <div class ="Header_Cont">
+        <div class="Header-Cont-Barra">
             <img src="/images/logo-mat-ear.png" alt="Logo MateAr">
-            <div class="barra-2-header">
-                <input type="text" name="search" placeholder="Buscar producto o marca" class="searchbar-header" autocomplete="off">
+            <div class="Header-Barra-Busqueda">
+                <input type="text" name="search" placeholder="Buscar producto o marca" class="Header-Searchbar-Input" autocomplete="off">
             </div>
         </div>
-        <div>
-            <ul class="item-list-header">
+        <div class = "Header-Cont-List">
+            <ul class="Header-List-Items">
                 <li><a href="/product-detail">Ofertas</a></li>
                 <li><a href="#">Ayuda</a></li>
                 <li><a href="/register">Registrate <i class="fas fa-id-card"></i></a></li>
