--- a/core/views/producto/productNew.ejs
+++ b/core/views/producto/productNew.ejs
@@ -22,9 +22,6 @@
                     <div class ="Cont_Icon_File_Img">
                         <i class="fas fa-file-image"></i>
                     </div>
-                    <div class ="Cont_Input_File_Img">
-                        <input type ="file" name = "imgProduct">
-                    </div>
                 </div>
 
                 <div class ="Nomb_Desc_Product">
@@ -51,6 +48,9 @@
                 </div>
             </form>
             <div class ="Cont_buttons_New_Product">
+                <div class ="Cont_Input_File_Img">
+                    <input type ="file" name = "imgProduct" class ="Input_File_Img">
+                </div>
                 <div class ="Button_New_Product">
                         <button type="submit" value="Agregar" class = "ButonAddProduct" name ="ButonAddProduct">Agregar</button>
                         <button type="submit" value="Cancelar" class = "ButtonCancProduct" name="ButtonCancProduct">Cancelar</button>
