--- a/core/public/css/stylesheet.css
+++ b/core/public/css/stylesheet.css
@@ -100,9 +100,9 @@ Header{display: flex; flex-direction: column;}
 .Register-Cont-Main-Form{
     display: flex;
     padding: 0px;
-    margin-top: 5%;
+    margin-top: 6%;
     margin-bottom: 5%;
-    margin-left: 10%;
+    margin-left: 28%;
     margin-right: 20%;
     width: 55vw;
     height: 60vh;
@@ -149,7 +149,8 @@ Header{display: flex; flex-direction: column;}
     box-sizing: border-box;
 } 
 
-/*product add */
+/* ---------------------------------- */
+/* ---------- PRODUCT NEW ---------- */
 .Cont_Gral_Form_newProduct{
     display: flex;
     flex-direction: row;
@@ -213,6 +214,11 @@ Header{display: flex; flex-direction: column;}
     width: 30vw;
     height: 3vh;
 }
+
+.Cont_Input_File_Img #Input_File_Img{
+    content: 'Aplicar';
+}
+
 .Form_newProduct input {
     border-radius: 0.4vw;
     border: 0.5px solid;
@@ -245,7 +251,7 @@ Header{display: flex; flex-direction: column;}
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-around;
     align-items: flex-end;
 }
 
@@ -259,88 +265,43 @@ Header{display: flex; flex-direction: column;}
 }
 
 
+
+
 /*product detail*/
-
-.contenedor-prod-det{
+.Product-Detail-Body{
     display: flex;
-    align-items: center;
-
-}
-
-.imagenes-prod-det{
-    padding: 10px;
-    
-    box-shadow: 0 0 3em rgb(36, 35, 35);
-    margin: 7%;
-    padding: 0%;
-    border-radius: 5px;
-}
-.detalle-prod-det{
     flex-direction: column;
-    
-    background-color: antiquewhite;
-    border-radius: 5px;
-    padding: 25px;
-    box-shadow: 0 0 3em rgb(36, 35, 35);
-}
-.titulo-detalle-prod-det{
-    border-bottom: #453921 solid 1px;
-}
-.price-prod-det{
-    font-size: 24px;
-
-}
-.discount-prod-det{
-    color: green;
-
-}
-.description-prod-det{
-    width: auto;
-}
-.info-productos-prod-det{
-    color: gray;
-}
-
-.contenedor-prod-det{
-    display: flex;
     align-items: center;
-
+}
+.Product-Detail{
+    margin-top: 5%;
+    margin-bottom: 5%;
+    display: flex;    
+    justify-content: space-around;
+    border: solid 1px red;
+    width: 80%;
+    height: 50%;
+    background-color: white;
+    border-radius: 20px;
 }
 
-.imagenes-prod-det{
-    padding: 10px;
-    
-    box-shadow: 0 0 3em rgb(36, 35, 35);
-    margin: 7%;
-    padding: 0%;
-    border-radius: 5px;
-}
-.detalle-prod-det{
-    flex-direction: column;
-    
-    background-color: antiquewhite;
-    border-radius: 5px;
-    padding: 25px;
-    box-shadow: 0 0 3em rgb(36, 35, 35);
-}
-.titulo-detalle-prod-det{
-    border-bottom: #453921 solid 1px;
-}
-.price-prod-det{
-    font-size: 24px;
-
-}
-.discount-prod-det{
-    color: green;
-
-}
-.description-prod-det{
-    width: auto;
-}
-.info-productos-prod-det{
-    color: gray;
+.Product-Detail-Cont-Img{
+    width: 35%;
+    height: 10%;
+    border: solid 1px blue;
+    background-image: transparent;
+    border-radius: 50px;
 }
 
+.Product-Detail-Img{
+    width: 20vw;
+    height: 20vw;
+}
+.Product-Detail-Cont-Detalle{
+    width: 40vw;
+    height: 20vw;
+    border: solid 1px purple;
+}
 
 
 
