--- a/core/views/partials/header.ejs
+++ b/core/views/partials/header.ejs
@@ -14,6 +14,7 @@
                 <li><a href="/register">Registrate <i class="fas fa-id-card"></i></a></li>
                 <li><a href="/login">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="/cart">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
+                <li><a href="/products/new">Agregar producto <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </div>
     </div>
